--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="deepDive/class.js" defer></script>
+    <script src="devil/prototype.js" defer></script>
   </head>
   <body></body>
 </html>
